--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^2.0.0",
     "@pinia/nuxt": "^0.11.2",
+    "axios": "^1.12.2",
     "nuxt": "^4.1.2",
     "nuxt-gtag": "^4.0.0",
     "nuxt-security": "^2.4.0",
