--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^2.0.0",
     "@pinia/nuxt": "^0.11.2",
+    "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "nuxt": "^4.1.2",
     "nuxt-gtag": "^4.0.0",
     "nuxt-security": "^2.4.0",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
